--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,394 @@
-openai
-streamlit
-langchain
+absl-py==1.4.0
+aioboto3==11.1.0
+aiobotocore==2.5.0
+aiohttp==3.8.6
+aioitertools==0.11.0
+aiosignal==1.3.1
+aiostream==0.5.2
+alpaca-py==0.8.2
+alpaca-trade-api==3.0.2
+altair==4.2.2
+altgraph==0.17.3
+antlr4-python3-runtime==4.9.3
+anyio==3.6.2
+apify-client==1.0.0
+appdirs==1.4.4
+appnope==0.1.3
+APScheduler==3.6.3
+argilla==1.4.0
+asttokens==2.2.1
+async-timeout==4.0.2
+asyncio==3.4.3
+attrs==22.2.0
+Automat==22.10.0
+backcall==0.2.0
+backoff==2.2.1
+beautifulsoup4==4.9.3
+black==21.4b2
+bleach==6.0.0
+blinker==1.5
+boto3==1.26.76
+botocore==1.29.76
+breadability==0.1.20
+Brotli==1.0.9
+bs4==0.0.1
+build==0.10.0
+CacheControl==0.12.11
+cachetools==4.2.2
+certifi==2022.12.7
+cffi==1.15.1
+chardet==4.0.0
+charset-normalizer==2.1.1
+chromadb==0.3.11
+cleo==2.0.1
+click==8.1.3
+click-log==0.4.0
+clickhouse-connect==0.5.16
+cloudpickle==2.2.1
+colorama==0.4.6
+comm==0.1.3
+commonmark==0.9.1
+constantly==15.1.0
+contourpy==1.0.7
+coverage==7.2.3
+crashtest==0.4.1
+cryptography==41.0.3
+cssselect==1.2.0
+cssselect2==0.7.0
+cycler==0.11.0
+dataclasses==0.6
+dataclasses-json==0.5.7
+db-dtypes==1.1.1
+debugpy==1.6.7
+decorator==5.1.1
+deeplake==3.8.4
+Deprecated==1.2.13
+deprecation==2.1.0
+detectron2 @ git+https://github.com/facebookresearch/detectron2.git@d1e04565d3bec8719335b88be9e9b961bf3ec464
+dill==0.3.6
+distlib==0.3.6
+distro==1.8.0
+dnspython==2.3.0
+docker==6.0.1
+docopt==0.6.2
+docutils==0.19
+dotty-dict==1.3.1
+duckdb==0.7.1
+duckduckgo-search==3.0.2
+dulwich==0.21.3
+effdet==0.3.0
+email-validator==2.0.0.post2
+entrypoints==0.4
+eod==0.2.1
+et-xmlfile==1.1.0
+exceptiongroup==1.1.2
+executing==1.2.0
+faiss-cpu==1.7.3
+Faker==18.4.0
+fastapi==0.95.0
+filelock==3.10.0
+flake8==6.0.0
+Flask==2.2.3
+flupy==1.2.0
+fonttools==4.39.3
+fpdf==1.7.2
+frozenlist==1.3.1
+fsspec==2023.10.0
+future==0.18.3
+fvcore==0.1.5.post20221221
+gitdb==4.0.10
+GitPython==3.1.40
+google-api-core==2.11.0
+google-api-python-client==2.81.0
+google-auth==2.16.2
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==1.0.0
+google-cloud-bigquery==3.10.0
+google-cloud-bigquery-storage==2.19.1
+google-cloud-core==2.3.2
+google-crc32c==1.5.0
+google-resumable-media==2.5.0
+googleapis-common-protos==1.58.0
+googlesearch-python==1.1.0
+gotrue==0.2.0
+greenlet==2.0.2
+grpcio==1.54.0
+grpcio-status==1.54.0
+gTTS==2.3.1
+h11==0.14.0
+hnswlib==0.7.0
+html5lib==1.1
+httpcore==1.0.2
+httplib2==0.21.0
+httptools==0.5.0
+httpx==0.25.1
+httpx-sse==0.3.1
+huggingface-hub==0.13.2
+humbug==0.3.1
+hydra-core==1.3.2
+hyperlink==21.0.0
+idna==2.10
+importlib-metadata==6.1.0
+incremental==22.10.0
+iniconfig==2.0.0
+installer==0.7.0
+invoke==1.7.3
+iopath==0.1.9
+ipykernel==6.22.0
+ipython==8.12.0
+itemadapter==0.8.0
+itemloaders==1.1.0
+itsdangerous==2.1.2
+jaraco.classes==3.2.3
+jedi==0.18.2
+Jinja2==3.1.2
+jmespath==1.0.1
+joblib==1.2.0
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.17.3
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+keyring==23.13.1
+kiwisolver==1.4.4
+langchain==0.0.335
+langchain-cli==0.0.16
+langserve==0.0.27
+langsmith==0.0.64
+layoutparser==0.3.4
+libdeeplake==0.0.84
+llama-index==0.8.67
+lockfile==0.12.2
+loguru==0.7.0
+lxml==4.9.2
+lz4==4.3.2
+macholib==1.16.2
+Markdown==3.4.1
+markdown2==2.4.9
+MarkupSafe==2.1.2
+marshmallow==3.19.0
+marshmallow-enum==1.5.1
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+mccabe==0.7.0
+md2pdf==1.0.1
+monotonic==1.6
+more-itertools==9.1.0
+mplfinance==0.12.9b7
+mpmath==1.3.0
+msgpack==1.0.3
+multidict==5.2.0
+multiprocess==0.70.14
+mypy-extensions==1.0.0
+nest-asyncio==1.5.8
+networkx==3.0
+nltk==3.8.1
+numcodecs==0.11.0
+numexpr==2.8.4
+numpy==1.23.5
+oauthlib==3.2.2
+omegaconf==2.3.0
+openai==0.28.1
+openapi-schema-pydantic==1.2.4
+opencv-python==4.6.0.66
+openpyxl==3.1.2
+orjson==3.8.10
+outcome==1.2.0
+packaging==23.0
+pandas==1.5.3
+pandas-gbq==0.19.2
+parsel==1.8.1
+parso==0.8.3
+pathos==0.3.0
+pathspec==0.11.1
+pdf2image==1.16.3
+pdfminer.six==20221105
+pdfplumber==0.8.0
+peopledatalabs==2.0.1
+pexpect==4.8.0
+pgvector==0.1.6
+pickleshare==0.7.5
+Pillow==9.4.0
+pinecone-client==2.2.4
+pipdeptree==2.7.0
+pkginfo==1.9.6
+platformdirs==2.6.2
+playsound==1.2.2
+playwright==1.35.0
+pluggy==1.0.0
+poetry==1.4.2
+poetry-core==1.5.2
+poetry-plugin-export==1.3.0
+portalocker==2.7.0
+postgrest==0.10.6
+postgrest-py==0.4.0
+pox==0.3.2
+ppft==1.7.6.6
+prompt-toolkit==3.0.38
+Protego==0.3.0
+proto-plus==1.22.2
+protobuf==3.20.3
+psutil==5.9.4
+psycopg2-binary==2.9.6
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py==1.11.0
+pyarrow==11.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycocotools==2.0.6
+pycodestyle==2.10.0
+pycountry==22.3.5
+pycparser==2.21
+pydantic==1.10.2
+pydata-google-auth==1.8.0
+pydeck==0.8.0
+PyDispatcher==2.0.7
+pydot==1.4.2
+pydyf==0.7.0
+pyee==9.0.4
+pyflakes==3.0.1
+Pygments==2.16.1
+pyinstaller==5.10.0
+pyinstaller-hooks-contrib==2023.2
+PyJWT==2.6.0
+Pympler==1.0.1
+pyOpenSSL==23.2.0
+pypandoc==1.11
+pyparsing==3.0.9
+pypdf==3.8.1
+PyPDF2==3.0.1
+pyphen==0.14.0
+pyproject_hooks==1.0.0
+pyrsistent==0.19.3
+PySocks==1.7.1
+pytesseract==0.3.10
+pytest==6.2.5
+python-dateutil==2.8.2
+python-docx==0.8.11
+python-dotenv==0.21.1
+python-gitlab==3.14.0
+python-magic==0.4.27
+python-multipart==0.0.6
+python-pptx==0.6.21
+python-semantic-release==7.33.2
+python-telegram-bot==13.7
+pytube==12.1.2
+pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+pyzmq==25.0.2
+queuelib==1.6.2
+# Editable install with no version control (rag-pinecone==0.1.0)
+-e /Users/udimenkes/Documents/langservecli/my-app/packages/rag-pinecone
+rapidfuzz==2.15.1
+readability-lxml==0.8.1
+readme-renderer==37.3
+realtime==1.0.0
+realtime-py==0.1.3
+redis==4.5.4
+regex==2022.10.31
+requests==2.31.0
+requests-file==1.5.1
+requests-oauthlib==1.3.1
+requests-toolbelt==0.10.1
+rfc3986==1.5.0
+rich==13.0.1
+rsa==4.9
+s3transfer==0.6.0
+scikit-learn==1.2.2
+scipy==1.10.1
+scrapeops-scrapy-proxy-sdk==1.0
+Scrapy==2.10.1
+sec-edgar-downloader==4.3.0
+selenium==4.10.0
+semver==2.13.0
+sentence-transformers==2.2.2
+sentencepiece==0.1.97
+service-identity==23.1.0
+shellingham==1.5.0.post1
+six==1.16.0
+smmap==5.0.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.4
+SQLAlchemy==2.0.23
+sqlalchemy-bigquery==1.6.1
+sse-starlette==1.6.5
+sseclient-py==1.7.2
+stack-data==0.6.2
+starlette==0.26.1
+storage3==0.5.2
+streamlit==1.28.1
+StrEnum==0.4.10
+sumy==0.11.0
+supabase==1.0.3
+supabase-py==0.0.2
+supafunc==0.2.2
+sympy==1.11.1
+tabulate==0.9.0
+tenacity==8.2.2
+tensorboard==2.12.0
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+termcolor==2.2.0
+textblob==0.17.1
+threadpoolctl==3.1.0
+tiktoken==0.5.1
+timm==0.6.13
+tinycss2==1.2.1
+tldextract==3.4.4
+tokenizers==0.13.2
+toml==0.10.2
+tomlkit==0.12.2
+toolz==0.12.0
+torch==2.0.0
+torchvision==0.15.1
+tornado==6.2
+tqdm==4.65.0
+traitlets==5.9.0
+transformers==4.27.1
+trio==0.22.1
+trio-websocket==0.10.3
+trove-classifiers==2023.3.9
+tweepy==4.13.0
+twine==3.8.0
+Twisted==22.10.0
+typer==0.9.0
+typing-inspect==0.8.0
+typing_extensions==4.5.0
+tzdata==2022.7
+tzlocal==4.3
+unstructured==0.5.6
+unstructured-inference==0.2.4
+uritemplate==4.1.1
+urllib3==1.26.14
+uvicorn==0.23.2
+uvloop==0.17.0
+validators==0.20.0
+vecs==0.4.1
+virtualenv==20.21.0
+w3lib==2.1.2
+Wand==0.6.11
+watchfiles==0.18.1
+wcwidth==0.2.6
+weasyprint==59.0
+webdriver-manager==3.8.6
+webencodings==0.5.1
+websocket-client==1.5.1
+websockets==10.4
+Werkzeug==2.2.3
+whisper==1.1.10
+wrapt==1.14.1
+wsproto==1.2.0
+xattr==0.10.1
+XlsxWriter==3.0.9
+yacs==0.1.8
+yarl==1.8.1
+youtube-dl==2021.12.17
+youtube-search-python==1.6.6
+youtube-transcript-api==0.5.0
+zipp==3.15.0
+zope.interface==6.0
+zopfli==0.2.2
+zstandard==0.20.0
